[metadata]
description-file=README.md

[tool:pytest]
filterwarnings =
    ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated.*:DeprecationWarning:dateutil\.tz\.tz
markers =
    parser: parser-heavy date parsing coverage
    recurring: recurring schedule parsing coverage
    regression: targeted regression and catalog coverage
    slow: long-running parser stress coverage
    variant: generated or sweep-style phrase variation coverage

[coverage:run]
source = stringtime
branch = True

[coverage:report]
show_missing = True
skip_covered = False
